# self-calibrating-slam

./: .gitignore  README.md  g2o.drawio  requirements.txt
doc/: g2o.drawio  structures.drawio
g2o/: .gitignore
g2o/g2o/core/: base_fixed_sized_edge.h  block_solver.hpp
g2o/g2o/types/: CMakeLists.txt
g2o/g2o/types/sclam2d/: CMakeLists.txt  constraint_info3.cpp  constraint_info3.h  constraint_pose2d_v2.cpp  constraint_pose2d_v2.h  constraint_poses2d_se2.cpp  constraint_poses2d_se2.h  constraint_poses2d_se2_bias.cpp  constraint_poses2d_se2_bias.h  constraint_poses2d_se2_i.cpp  constraint_poses2d_se2_i.h  constraint_poses2d_se2_offset.cpp  constraint_poses2d_se2_offset.h  constraint_poses2d_se2_pse2.cpp  constraint_poses2d_se2_pse2.h  constraint_poses2d_se2_pv3.cpp  constraint_poses2d_se2_pv3.h  constraint_poses2d_se2_scale.cpp  constraint_poses2d_se2_scale.h  constraint_poses2d_se2_se2.cpp  constraint_poses2d_se2_se2.h  constraint_poses2d_se2_v1.cpp  constraint_poses2d_se2_v1.h  constraint_poses2d_se2_v2.cpp  constraint_poses2d_se2_v2.h  constraint_poses2d_se2_v3.cpp  constraint_poses2d_se2_v3.h  edge_poses2d_se2.cpp  info3.cpp  info3.h  node_se2.cpp  node_se2.h  node_v1.cpp  node_v1.h  node_v2.h  node_v3.cpp  node_v3.h  param.cpp  param.h  param_bias.cpp  (+22 more)
g2o/g2o/types/scslam2d/: CMakeLists.txt  constraint_pose2d_se2.cpp  constraint_pose2d_se2.h  constraint_pose2d_v2.cpp  constraint_pose2d_v2.h  constraint_poses2d_se2.cpp  constraint_poses2d_se2.h  constraint_poses2d_se2_cov.cpp  constraint_poses2d_se2_cov.h  constraint_poses2d_se2_pse2.cpp  constraint_poses2d_se2_pse2.h  constraint_poses2d_se2_pv2.cpp  constraint_poses2d_se2_pv2.h  info3.cpp  info3.h  node_se2.cpp  node_se2.h  node_v2.cpp  node_v2.h  param.cpp  param.h  param_se2.cpp  param_se2.h  param_v2.cpp  param_v2.h  types_sclam2d.cpp  types_sclam2d.h  utility_poses2d.cpp  utility_poses2d.h
graphs/: input_INTEL_g2o.g2o  input_M3500_g2o.g2o  input_M3500a_g2o.g2o  input_M3500b_g2o.g2o  input_M3500c_g2o.g2o  input_MITb_g2o.g2o  solution_INTEL_g2o.g2o  solution_MITb_g2o.g2o
src/: main.py  setup.py
src/examples/: test_perturbed.g2o  test_perturbed_after.g2o  test_true.g2o
src/framework/: __init__.py
src/framework/analysis/: Analyser.py  AnalysisSet.py  Plotter.py  SimulationSet.py  analysis.py  plot_sim.py
src/framework/graph/: Analyser.py  BaseGraph.py  BlockMatrix.py  CalibratingGraph.py  Database.py  Edge.py  Element.py  FactorGraph.py  Graph.py  GraphAnalyser.py  GraphContainer.py  GraphManager.py  GraphParser.py  Node.py  __init__.py  database.py
src/framework/groups/: Group.py  SE.py  SE2.py  SE3.py  SO.py  SO2.py  SO3.py  __init__.py
src/framework/math/: Dimensional.py
src/framework/optimiser/: Optimiser.py
src/framework/ppg/: Data.py  Database.py  Graph.py  GraphParser.py  Measurement.py  database.py  test.py
src/framework/simulation/: BiSimulation.py  BiSimulation2D.py  ConfigurationSet.py  Model.py  Model2D.py  Parameter.py  ParameterDictTree.py  ParameterSet.py  Path.py  PostAnalyser.py  Sensor.py  Simulation.py  Simulation2D.py  Simulator2D.py  SubModel2D.py  SubSimulation2D.py  __init__.py
src/framework/structures/: MultiDimensional.py  Parser.py  Quaternion.py  Square.py  Vector.py  Vector2.py  Vector3.py  Vector6.py  VectorFactory.py  __init__.py
src/framework/types/: EdgeSE2.py  NodeSE2.py  __init__.py
src/groups/: Group.py  SE.py  SE2.py  SE3.py  SO.py  SO2.py  SO3.py  __init__.py
src/gui/: GraphContainer.py  MainWindow.py  __init__.py  debug.txt  gui.py
src/gui/action_pane/: ActionPane.py  ConfigurationTree.py  GraphBox.py  GroupComboBox.py  GroupUpdateComboBox.py  HistoryCheckbox.py  LibraryBox.py  OptimisationPane.py  ParameterTree.py  SelectBox.py  SimulationBox.py  SimulationPane.py  SimulationTable.py  SolverBox.py  UpdateBox.py
src/gui/info_pane/: BrowserTree.py  InfoPane.py  InspectorTree.py  LabelPane.py  TimestampBox.py  TimestepBox.py
src/gui/menus/: AboutMenu.py  AnalyserMenu.py  FileMenu.py  Menu.py  ViewMenu.py  __init__.py
src/gui/modules/: Container.py  GraphContainer.py  OptimisationHandler.py  PopUp.py  SimulationHandler.py  TreeNode.py
src/gui/terminal/: TerminalText.py
src/gui/utils/: GroupComboBox.py  LabelPane.py  PopUp.py
src/gui/viewer/: Colour.py  Drawer.py  Grid.py  Rgb.py  Viewer.py
src/gui/widgets/: Browser.py  BrowserTree.py  Inspector.py  Terminal.py  TerminalText.py  __init__.py
src/pyqt/pyqt/: viewer.py  viewer.pyproject
src/simulation/: Simulation.py  Simulations.py  simulation.py  simulations.py
src/simulation/calibration/: CalibrationSimulation.py  ReturnTripSim.py  SingleTripSim.py  SquarePriorTripSim.py
src/simulation/dataset/: IntelDatasetSim.py  IntelDatasetSimWith.py  IntelDatasetSimulation.py  MitDatasetSimulation.py
src/simulation/hardcoded/: HardcodedSimulation.py
src/simulation/manhattan/: ManTestSim.py  ManhattanSim.py  ManhattanSimWith.py
src/simulation/results/: ResultStepBias.py  Results.py  ResultsConstantBias.py  ResultsConstantOffset.py  ResultsConstantScale.py  ResultsPlain.py  ResultsSinBias.py  ResultsSinScale.py  ResultsSpatialBias.py
src/structures/: Square.py  Vector.py  Vector2.py  Vector3.py  __init__.py
src/utils/: DictTree.py  GeoHash2D.py  TwoWayDict.py  TypeDict.py  __init__.py
src/viewer/: Browser.py  Drawer.py  GraphViewer.py  Inspector.py  MainWindow.py  Stream.py  Viewer.py  __init__.py  test.g2o  viewer.py
(+176 files in other folders)
